# testing-plugin

./: .gitignore  CMakeLists.txt  README.md  addon.json  build.sh  integrate-plugin.sh  rebuild.sh  release.sh
models/: traced-lin-pred.pt
testing-plugin/: testing-plugin.hpp  testing-pluginModel.cpp  testing-pluginModel.hpp  testing-pluginUi.hpp
testing-plugin-build-release/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  install_manifest.txt  my_gain_avnd.cpp  retained-symbols.txt  score_addon_testing-plugin.cpp  score_addon_testing-plugin.hpp
testing-plugin-build-release/plugins/: localaddon.json
